--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@
 
 .descrição-turmas{
     font-size: 20px;
-    color:blue;
+    color:green;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-bottom: 5px;
     margin-left: 8px;
@@ -107,7 +107,85 @@
         border-width: 3px 3px 3px 3px;
         border-color: lightgreen;
         border-style:solid;
-        margin: 10px;
-    
-
+        margin: 10px; 
 }
+
+
+.texto-monitoria{
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+
+.texto-gremio{
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+
+.volei{
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+
+.mais-aprendizagem{
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+
+.edutech{
+    font-size: 20px;
+    padding-bottom: 15px;
+}
+
+.subtitulos-um{
+    font-size: 25px;
+    padding-bottom: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: green;
+}
+.subtitulos-dois{
+    font-size: 25px;
+    padding-bottom: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: green;
+}
+.subtitulos-tres{
+    font-size: 25px;
+    padding-bottom: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: green;
+}
+.subtitulos-quatro{
+    font-size: 25px;
+    padding-bottom: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: green;
+}
+.subtitulos-cinco{
+    font-size: 25px;
+    padding-bottom: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: green;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
